@@ -1,7 +1,7 @@
 name="batteries_nothreads"
 version="0.1"
 description="Batteries Included, standard distribution of OCaml libraries (non-thread version)"
-requires="num,bigarray,str,findlib"
+requires="unix,num,bigarray,str,findlib"
 
 archive(byte)  ="batteries.cma"
 archive(native)="batteries.cmxa"
