@@ -1,2 +1,3 @@
 <batteries_threads.ml>  :pkg_threads
 <batteries.ml>          :pkg_threads
+<batteries.cma>         :autolib
