@@ -1,4 +1,5 @@
 Batteries
+Batteries
 Batlib_Baselib_Big_int
 Batlib_Baselib_Genlex
 Batlib_Baselib_HashtblLabels
@@ -44,62 +45,58 @@ Batlib_Baselib_Marshal
 Batlib_Baselib_Weak
 Batlib_Baselib_Str
 Batlib_Baselib_Lazy
-toolchain
-extlib
-batteries_core_threads
-enum
-lazyList
-extString
-extNum
-extNativeint
-unzip
-extInt64
-extComplex
-global
-dynArray
-extInt
-labels
-uTF8
-std
-install
-result
-enumLabels
-extInt32
-extList
-extChar
-pMap
-vect
-lazyListLabels
-extGenlex
-optParse
-dllist
-bitSet
-extBool
-refList
-extRandom
-file
-extArray
-ref
-charParser
-parserCo
-monad
-extStream
-rope
-extHashtbl
-extFloat
-number
-option
-base64
-uChar
+Enum
+LazyList
+ExtString
+ExtNum
+ExtNativeint
+Unzip
+ExtInt64
+ExtComplex
+Global
+DynArray
+ExtInt
+Labels
+UTF8
+Std
+Install
+Result
+EnumLabels
+ExtInt32
+ExtList
+ExtChar
+PMap
+Vect
+LazyListLabels
+ExtGenlex
+OptParse
+Dllist
+BitSet
+ExtBool
+RefList
+ExtRandom
+File
+ExtArray
+Ref
+CharParser
+ParserCo
+Monad
+ExtStream
+Rope
+ExtHashtbl
+ExtFloat
+Number
+Option
+Base64
+UChar
 IO
-extUnit
-extBig_int
-batteries_core
-builtin_tools
+ExtUnit
+ExtBig_int
+Batteries_core
+Builtin_tools
 Batlib_Findlib_Findlib
 Batlib_Baselib_Event
+Batteries_core_threads
 Batlib_Baselib_Condition
 Batlib_Baselib_Mutex
 Batlib_Baselib_Thread
-Batteries_core_pack
-Batteries_core
